// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSourceDetailActions should render properly when creating new 1`] = `
<Ei
  primary={
    Array [
      <si
        color="primary"
        icon={<Save />}
        onClick={[Function]}
        size="m"
    >
        Save
    </si>,
      <si
        icon={<Cancel />}
        onClick={[Function]}
        size="m"
    >
        Cancel
    </si>,
    ]
  }
  secondary={Array []}
/>
`;

exports[`DataSourceDetailActions should render properly when editing collaborative datasource 1`] = `
<Ei
  primary={
    Array [
      <si
        icon={<Cancel />}
        onClick={[Function]}
        size="m"
    >
        Cancel
    </si>,
    ]
  }
  secondary={Array []}
/>
`;

exports[`DataSourceDetailActions should render properly when editing owned datasource 1`] = `
<Ei
  primary={
    Array [
      <si
        color="primary"
        icon={<Save />}
        onClick={[Function]}
        size="m"
    >
        Save
    </si>,
      <si
        icon={<Cancel />}
        onClick={[Function]}
        size="m"
    >
        Cancel
    </si>,
    ]
  }
  secondary={
    Array [
      <si
        color="danger"
        icon={<Delete />}
        onClick={[Function]}
        size="m"
    >
        Delete
    </si>,
    ]
  }
/>
`;
